--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile "org.jetbrains.anko:anko-common:$anko_version"
-    compile "com.android.support:recyclerview-v7:$support_version"
+    compile "org.jetbrains.anko:anko-sqlite:$anko_version"
+    compile "com.android.support:recyclerview-v7:26.1.0"
     compile "com.google.code.gson:gson:2.8.0"
     compile "com.squareup.picasso:picasso:2.5.2"
 }
