--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,23 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-		<activity android:name=".ui.MainActivity">
+		<activity android:name=".ui.activities.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+		<activity
+			android:name=".ui.activities.DetailActivity"
+			android:parentActivityName=".ui.activities.MainActivity">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="com.antonioleiva.weatherapp.ui.activities.MainActivity"/>
+			</activity>
+		<activity
+			android:name=".ui.activities.SettingsActivity"
+			android:label="@string/settings"/>
 	</application>
 
 </manifest>
