--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile "org.jetbrains.anko:anko-common:$anko_version"
     compile "org.jetbrains.anko:anko-sqlite:$anko_version"
+    compile "org.jetbrains.anko:anko-coroutines:$anko_version"
     compile "com.android.support:recyclerview-v7:26.1.0"
     compile "com.google.code.gson:gson:2.8.0"
     compile "com.squareup.picasso:picasso:2.5.2"
